# sudoku-wave-function

./: Justfile  README.md  pyproject.toml  spike.py  sudoko.py  sudoku.py  test_sudoku.py
.devcontainer/: devcontainer.json
